[metadata]
name = celery-local-exporter
version = 1.0
description = A Prometheus exporter that lives inside your Celery process.
long_description = file: README.md
license = Apache License 2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:
install_requires =
    celery
    prometheus_client

[options.extras_require]
dev =
    pytest
    requests
tests =
    pytest
    requests

[options.packages.find]
where = src

[flake8]
max-line-length = 88
